--- a/app/assets/stylesheets/series-show.scss
+++ b/app/assets/stylesheets/series-show.scss
@@ -98,10 +98,11 @@ $iconSize: 50px;
   font-size: 1.125vw;
   color: #999;
   line-height: 1.3;
-  width: 30%;
   margin-top: $tileHeight / 6;
   margin-left: 3.8vw;
   z-index: 1;
+  width: 30%;
+  white-space: normal;
 }
 
 .serie-img {
